--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,3 @@
-[package]
-name = "fortuner"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-clap = "4.5"
-regex = "1.10"
-rand = "0.8.5"
-walkdir = "2.5"
-
-[dev-dependencies]
-predicates = "3.1"
-assert_cmd = "2.0"
+[workspace]
+members = ["fortuner", "strfiler"]
+resolver = "2"
